WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
36621
Fix build if NPAPI support is disabled
https://bugs.webkit.org/show_bug.cgi?id=36621
Summary
Fix build if NPAPI support is disabled
Laszlo Gombos
Reported
2010-03-25 14:50:01 PDT
Technically a build fix, but it probably should get reviewed.
Attachments
proposed patch
(3.40 KB, patch)
2010-03-25 14:59 PDT
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
Fix typo in ChangeLog
(3.40 KB, patch)
2010-03-25 15:01 PDT
,
Laszlo Gombos
no flags
Details
Formatted Diff
Diff
Build fix for EFL
(1.04 KB, patch)
2010-04-22 04:57 PDT
,
Gustavo Sverzut Barbieri
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Laszlo Gombos
Comment 1
2010-03-25 14:59:18 PDT
Created
attachment 51679
[details]
proposed patch
Laszlo Gombos
Comment 2
2010-03-25 15:01:07 PDT
Created
attachment 51680
[details]
Fix typo in ChangeLog
WebKit Commit Bot
Comment 3
2010-03-25 18:04:15 PDT
Comment on
attachment 51680
[details]
Fix typo in ChangeLog Clearing flags on attachment: 51680 Committed
r56585
: <
http://trac.webkit.org/changeset/56585
>
WebKit Commit Bot
Comment 4
2010-03-25 18:04:20 PDT
All reviewed patches have been landed. Closing bug.
Dmitry Titov
Comment 5
2010-03-25 18:52:05 PDT
Reverted:
http://trac.webkit.org/changeset/56587
Broke the build on Chromium bots. Sorry!
Laszlo Gombos
Comment 6
2010-04-21 20:07:21 PDT
Recommitted as
http://trac.webkit.org/changeset/58043
with a fix for Chromium. Many thanks for Dmitry foring reproducing and testing the fix for Chromium.
Gustavo Sverzut Barbieri
Comment 7
2010-04-22 04:57:53 PDT
Created
attachment 54051
[details]
Build fix for EFL EFL also need both methods to be defined as it is using PluginViewNone exclusively.
Eric Seidel (no email)
Comment 8
2010-04-22 04:59:41 PDT
The EFL patch should really go on a new bug. YOu can related that bug to this one, but there is little point in adding the EFL patch to this one.
Eric Seidel (no email)
Comment 9
2010-04-22 05:00:25 PDT
Re-opening so this can be landed by the cq.
Gustavo Sverzut Barbieri
Comment 10
2010-04-22 05:10:31 PDT
(In reply to
comment #8
)
> The EFL patch should really go on a new bug. YOu can related that bug to this > one, but there is little point in adding the EFL patch to this one.
Just did because it also caused a failure for Chromium and it was reported (in time) by Dmitry. I did the same, but later :-(
WebKit Commit Bot
Comment 11
2010-04-22 07:46:20 PDT
Comment on
attachment 54051
[details]
Build fix for EFL Clearing flags on attachment: 54051 Committed
r58095
: <
http://trac.webkit.org/changeset/58095
>
WebKit Commit Bot
Comment 12
2010-04-22 07:46:28 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 13
2010-04-26 03:34:49 PDT
Revision
r56585
cherry-picked into qtwebkit-2.0 with commit e226bf399de4dab974ef88cb47c9332fe578a1b2 Revision
r58095
cherry-picked into qtwebkit-2.0 with commit 5179f5c95c8685294696c7e78fd49a4aebcb5760
Jocelyn Turcotte
Comment 14
2010-04-26 03:54:13 PDT
***
Bug 35019
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug