WebCore/plugins/PluginView.h
@@ -139,8 +139,9 @@ namespace WebCore {
         static const char* userAgentStatic();
 #endif
         void status(const char* message);
-        NPError getValue(NPNVariable variable, void* value);
+        
 #if ENABLE(NETSCAPE_PLUGIN_API)
+        NPError getValue(NPNVariable variable, void* value);
         static NPError getValueStatic(NPNVariable variable, void* value);
 #endif
         NPError setValue(NPPVariable variable, void* value);
