WebCore/plugins/PluginViewNone.cpp
@@ -67,12 +67,12 @@ NPError PluginView::handlePostReadFile(Vector<char>&, uint32, const char*)
     return 0;
 }
 
+#if ENABLE(NETSCAPE_PLUGIN_API)
 bool PluginView::platformGetValue(NPNVariable, void*, NPError*)
 {
     return false;
 }
 
-#if ENABLE(NETSCAPE_PLUGIN_API)
 bool PluginView::platformGetValueStatic(NPNVariable, void*, NPError*)
 {
     return false;
@@ -126,6 +126,7 @@ void PluginView::keepAlive(NPP)
 }
 #endif
 
+#if PLATFORM(MAC)
 void PluginView::privateBrowsingStateChanged(bool)
 {
 }
@@ -133,5 +134,6 @@ void PluginView::privateBrowsingStateChanged(bool)
 void PluginView::setJavaScriptPaused(bool)
 {
 }
+#endif
 
 } // namespace WebCore
